// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Progress Step Indicator Matches snapshot with 3 steps and a title 1`] = `
<div
  className="jsx-1128701548 progressStepIndicator"
>
  <Row
    className="mb-4"
    noGutters={false}
  >
    <div
      className="mb-4 row"
    >
      <Col>
        <div
          className="col"
        >
          <h2
            className="jsx-1128701548"
          >
            This is a TEST TITLE
          </h2>
        </div>
      </Col>
    </div>
  </Row>
  <div
    className="jsx-1128701548 progress ml-1 mr-1"
  >
    <div
      aria-label="progress bar indicating the steps represented by this component"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="jsx-1128701548 progress-bar"
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="jsx-1128701548 d-flex flex-row justify-content-between mb-3"
  >
    Array [
      <div
        className="jsx-1375059393 numberedCircle badge-success"
      >
        99
      </div>,
      "",
    ]
    Array [
      <div
        className="jsx-1375059393 numberedCircle badge-success"
      >
        100
      </div>,
      "",
    ]
    Array [
      <div
        className="jsx-1375059393 numberedCircle badge-danger"
      >
        110
      </div>,
      "",
    ]
  </div>
  <Row
    noGutters={false}
  >
    <div
      className="row"
    >
      <Col
        className="stepDescription"
        key="description-99"
      >
        <div
          className="stepDescription col"
        >
          test step 1
        </div>
      </Col>
      <Col
        className="stepDescription"
        key="description-100"
      >
        <div
          className="stepDescription col"
        >
          test step 2
        </div>
      </Col>
      <Col
        className="stepDescription"
        key="description-110"
      >
        <div
          className="stepDescription col"
        >
          test step 3
        </div>
      </Col>
    </div>
  </Row>
</div>
`;

exports[`The Progress Step Indicator Renders with no steps 1`] = `
<div
  className="jsx-1128701548 progressStepIndicator"
>
  <div
    className="jsx-1128701548 progress ml-1 mr-1"
  >
    <div
      aria-label="progress bar indicating the steps represented by this component"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="jsx-1128701548 progress-bar"
      role="progressbar"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="jsx-1128701548 d-flex flex-row justify-content-between mb-3"
  />
  <Row
    noGutters={false}
  >
    <div
      className="row"
    />
  </Row>
</div>
`;
